# pd-hospital-homepage-crawler

./: .gitignore  CLAUDE.md  DESIGN.md  EVOLUTION.md  HANDOFF.md  README.md  main.py  presentation.html  pyproject.toml  triage.py
.claude/skills/hospital-homepage-extract/: SKILL.md
data/: beauty_hospitals_gangnam.csv  sample10.csv
experiments/: FINDINGS.md  REPORT.md  analyze.py  results.jsonl  run_matrix.py
experiments/runs/opus_high/: 6wzs3t_권장덕케이성형외과의원_homepage.json  828xg8_미인피부과의원_homepage.json  asnwyw_리더스피부과의원_homepage.json  e2atn2_디에이치페이스업의원_homepage.json  kgeuid_신논현톡스앤필의원_homepage.json  kl8cgn_바노바기성형외과의원_homepage.json  n1u349_대치오라클피부과의원_homepage.json  pja1wj_강남유앤아이의원_homepage.json  smado8_리프톤피부과의원_homepage.json  xd9css_도곡양재차앤박피부과의원_homepage.json
experiments/runs/opus_low/: 6wzs3t_권장덕케이성형외과의원_homepage.json  828xg8_미인피부과의원_homepage.json  asnwyw_리더스피부과의원_homepage.json  e2atn2_디에이치페이스업의원_homepage.json  kgeuid_신논현톡스앤필의원_homepage.json  kl8cgn_바노바기성형외과의원_homepage.json  n1u349_대치오라클피부과의원_homepage.json  pja1wj_강남유앤아이의원_homepage.json  smado8_리프톤피부과의원_homepage.json  xd9css_도곡양재차앤박피부과의원_homepage.json
experiments/runs/opus_medium/: 6wzs3t_권장덕케이성형외과의원_homepage.json  828xg8_미인피부과의원_homepage.json  asnwyw_리더스피부과의원_homepage.json  e2atn2_디에이치페이스업의원_homepage.json  kgeuid_신논현톡스앤필의원_homepage.json  kl8cgn_바노바기성형외과의원_homepage.json  n1u349_대치오라클피부과의원_homepage.json  pja1wj_강남유앤아이의원_homepage.json  smado8_리프톤피부과의원_homepage.json  xd9css_도곡양재차앤박피부과의원_homepage.json
experiments/runs/sonnet_high/: 6wzs3t_권장덕케이성형외과의원_homepage.json  828xg8_미인피부과의원_homepage.json  (+8 more)
(+85 files in other folders)
